--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=5000
-URI=mongodb+srv://deepakbhawsar:bhawsar2002@cluster0.cjwzadh.mongodb.net/photography
-JWT_SECRET_KEY=iamdeepak
+URI=mongodb+srv://<username>:<password>@cluster0.cjwzadh.mongodb.net/photography
+JWT_SECRET_KEY=<key>
